<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Developers Dominicanos - Social App</string>
    <string name="header_separator">Tutoriales</string>
    <string name="app_desc">Comunidad de Developers Dominicanos {http://developers.do} || {@DevelopersDO}</string>
    <string name="blog">http://developers.do</string>
    <string name="twitter">twitter:@DevelopersDO</string>
    <string name="version">Beta v0.9.2</string>
    
    <!-- Menu -->
    <string name="Menu_Home">Inicio</string>
    <string name="Menu_Colaboradores">Colaboradores</string>
    <string name="Menu_Salir">Salir</string>
    
    <!-- Colaboradores -->
    <string name="Colaborador_1">Hector Minaya,  @HectorMinaya</string>
    <string name="Colaborador_2">Roman Jaquez, @DrCoderz</string>
    <string name="Colaborador_3">Tomás Cruz, @tcruzrod</string>
    
</resources>
