<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
<ImageView 
  	android:id="@+id/icon"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
	android:src="@drawable/android_colaboradores"
  	android:layout_marginTop="10dip"
  	android:layout_alignParentTop="true"
  	android:layout_centerInParent="true"
  	/>
  
<TextView 
	android:id="@+id/separator_text"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_below="@+id/icon"
	android:text="Personas que dedicaron de su valioso tiempo y esfuerzo para realizar esta app...."
	android:layout_marginTop="15dp"
	android:padding="5dp"
  	android:textStyle="bold"
	android:background="@color/separator_bg_color"
	android:textColor="@color/separator_text_color"
/>
       <TextView
		android:id="@+id/Colaborador_1"
		android:text="@string/Colaborador_1"
		android:layout_below="@+id/separator_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_marginTop="20dip"
     />
       <TextView
		android:id="@+id/Colaborador_2"
		android:text="@string/Colaborador_2"
		android:layout_below="@+id/Colaborador_1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_marginTop="15dip"
     />
       <TextView
		android:id="@+id/Colaborador_3"
		android:text="@string/Colaborador_3"
		android:layout_below="@+id/Colaborador_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_marginTop="15dip"
     />
       <TextView
		android:id="@+id/beta"
		android:text="@string/version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dip"
		android:layout_centerInParent="true"
		android:layout_alignParentBottom="true"
		android:textColor="@color/beta"
		android:textSize="8pt"
     />
    
</RelativeLayout>
